--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs: # a collection of steps
           paths:
             - ~/.m2
           key: working-dir-{{ checksum "pom.xml" }}
-      
+      - run: ls -al
       - run: mvn test -PFull # run the actual tests
       
       - store_test_results: # uploads the test metadata from the `target/surefire-reports` directory so that it can show up in the CircleCI dashboard. 
