--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 						<version>3.0.0-M4</version>
 						<configuration>
 							<suiteXmlFiles>
-								<suiteXmlFile>testng.xml</suiteXmlFile>
+								<suiteXmlFile>testNG.xml</suiteXmlFile>
 								<suiteXmlFile>testngCucumber.xml</suiteXmlFile>
 							</suiteXmlFiles>
 						</configuration>
@@ -58,7 +58,7 @@
 						<version>3.0.0-M4</version>
 						<configuration>
 							<suiteXmlFiles>
-								<suiteXmlFile>testng.xml</suiteXmlFile>
+								<suiteXmlFile>testNG.xml</suiteXmlFile>
 							</suiteXmlFiles>
 						</configuration>
 					</plugin>
