use doc example on how to load surefire reports

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,11 +44,22 @@ jobs: # a collection of steps
       
       - run: mvn test -PFull # run the actual tests
       
-      - store_test_results: # uploads the test metadata from the `target/surefire-reports` directory so that it can show up in the CircleCI dashboard. 
+ #     - store_test_results: # uploads the test metadata from the `target/surefire-reports` directory so that it can show up in the CircleCI dashboard. 
       # Upload test results for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: target/surefire-reports
+ #         path: target/surefire-reports
+ 
+     - run:
+          name: Save test results
+          command: |
+            mkdir -p ~/test-results/junit/
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
+          when: always
+      - store_test_results:
+          path: ~/test-results
+      - store_artifacts:
+          path: ~/test-results/junit    
       
-      - store_artifacts: # uploads the log files
+     - store_artifacts: # uploads the log files
       # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
           path: logs
                  
