--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs: # a collection of steps
       -  run:
            name: Install latest version of ChromeDriver Sample
            command: |
-               sudo wget https://chromedriver.storage.googleapis.com/2.31/chromedriver_linux64.zip
+               sudo wget https://chromedriver.storage.googleapis.com/80.0.3987.106/chromedriver_linux64.zip
                sudo unzip chromedriver_linux64.zip
                sudo rm chromedriver_linux64.zip
                sudo mv chromedriver /usr/local/bin/
