--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs: # a collection of steps
            
       - run:
           name: Run Maven Tests
-          command: mvn test -PRegression # run the actual tests
+          command: mvn test -PFull # run the actual tests
           
       - run:
           name: Save test results
