--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,8 +31,12 @@ jobs: # a collection of steps
                sudo chmod 777 /usr/local/bin/chromedriver
            
       - run:
+          name: Check out environment variable for profile
+          command:
+               echo $WIKI_MAVEN_TEST_PROFILE
+      - run:
           name: Run Maven Tests
-          command: mvn test -PFull # run the actual tests
+          command: mvn test -P$WIKI_MAVEN_TEST_PROFILEl # run the actual tests
           
       - run:
           name: Save test results
