--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,9 +48,9 @@ jobs: # a collection of steps
       - store_test_results:
           path: ~/test-results
           
-      - store_test_results:
-          path: target/surefire-reports
-
+      - store_artifacts:
+          path: ~/target/surefire-reports
+          
       - store_artifacts:
           path: ~/test-results/junit 
              
