Added support for windows 10

--- a/resources/data.properties
+++ b/resources/data.properties
@@ -1,8 +1,7 @@
 browser=chrome
 linux_chrome_driver_location=//usr//local//bin//chromedriver
-windows_chrome_driver_location=TBD
-circleci_chrome_driver_location=//usr//local//bin//chromedriver
-windows_firefox_driver_location=TBD
+windows_chrome_driver_location=C:\\WikiAutomation\\chromedriver.exe
+windows_firefox_driver_location=C:\\WikiAutomation\\geckodriver.exe
 linux_firefox_driver_location=//usr//local//bin//geckodriver
 url=https://store.wikimedia.org
 headless=false
